test/libyul/yulSyntaxTests/if_statement_invalid_1.yul
{
    if mload {}
}
// ----
// DeclarationError 8198: (9-14): Identifier not found.
// TypeError 1733: (9-14): Expected a value of boolean type "bool" but got "u256"
